--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "Limishenko.V",
   "license": "ISC",
   "dependencies": {
+    "@std/esm": "^0.26.0",
+    "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.22",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.4"
   }
 }
