--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Limishenko.V",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "json-server": "^0.14.2",
     "mongodb": "^3.1.13"
   }
 }
