--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "booking-server",
   "version": "0.0.1",
   "description": "api for hillel angular application",
-  "main": "server.js",
+  "main": "jsonServer.js",
   "scripts": {
     "test": "test",
-    "start": "./node_modules/.bin/json-server -p 8080 ./server-data.json"
+    "start": "node jsonServer.js"
   },
   "author": "Limishenko.V",
   "license": "ISC",
