--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "api for hillel angular application",
   "main": "server.js",
+  "web": "server.js",
   "scripts": {
     "test": "test"
   },
